correcion SonarQube warnings